--- a/themes/contracts/assets/scss/_keiyaku.scss
+++ b/themes/contracts/assets/scss/_keiyaku.scss
@@ -1,104 +1,142 @@
 .keiyaku {
   counter-reset: keiyaku-chapter;
   position: relative;
-  font-family: serif;
-}
 
-.keiyaku>h1 {
-  text-align: center;
-}
+  >h1 {
+    text-align: center;
 
-.keiyaku>h1:first-child {
-  margin-top: 0;
-}
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 
-.keiyaku>h2 {
-  counter-reset: keiyaku-paragraph;
-  counter-increment: keiyaku-chapter;
-}
+  >h2 {
+    counter-reset: keiyaku-paragraph;
+    counter-increment: keiyaku-chapter;
 
-.keiyaku>h2::before {
-  content: "\7B2C\00A0"counter(keiyaku-chapter) "\00A0\6761\FF08";
-}
+    &::before {
+      content: "\7B2C\00A0"counter(keiyaku-chapter) "\00A0\6761\2022";
+    }
+  }
 
-.keiyaku>h2::after {
-  content: "\FF09";
-}
+  // >p {
+  //   counter-increment: keiyaku-paragraph;
+  //   text-indent: 1em;
+  //   padding-left: 1em;
 
-.keiyaku>p {
-  counter-increment: keiyaku-paragraph;
-  text-indent: 1em;
-  padding-left: 1em;
-}
+  //   &::before {
+  //     content: counter(keiyaku-paragraph) " ";
+  //     font-weight: bold;
+  //     margin-left: -2em;
+  //     margin-right: 1em;
+  //   }
+  // }
 
-.keiyaku>h1+p,
-.keiyaku>h2+p,
-.keiyaku>hr+p,
-.keiyaku>p:first-of-type {
-  text-indent: 0;
-  padding-left: 0;
-}
+  >h1+p,
+  >h2+p,
+  >hr+p,
+  >p:first-of-type {
+    text-indent: 0;
+    padding-left: 0;
 
-.keiyaku>p::before {
-  content: counter(keiyaku-paragraph) " ";
-  font-weight: bold;
-  margin-left: -2em;
-  margin-right: 1em;
-}
+    &::before {
+      content: none;
+    }
+  }
 
-.keiyaku>h1+p::before,
-.keiyaku>h2+p::before,
-.keiyaku>hr+p::before,
-.keiyaku>p:first-of-type::before {
-  content: none;
-}
+  >ul {
+    padding: 0 0 0 2.5em;
+  }
 
-.keiyaku>ul {
-  padding: 0 0 0 2.5em;
-}
+  %c-ol {
+    list-style: none;
+    padding: 0 0 0 2.5em;
+  }
 
-.keiyaku>ol {
-  list-style: none;
-  counter-reset: keiyaku-ordered-list;
-  padding: 0 0 0 2.5em;
-}
+  >ol {
+    @extend %c-ol;
+    counter-reset: keiyaku-ordered-list;
 
-.keiyaku>ol>li {
-  counter-increment: keiyaku-ordered-list;
-  text-indent: -2.5em;
-}
+    >li {
+      text-indent: -2.5em;
+      counter-increment: keiyaku-ordered-list;
 
-.keiyaku>ol>li::before {
-  content: "\FF08"counter(keiyaku-ordered-list) "\FF09";
-}
+      &::before {
+        content: "\FF08"counter(keiyaku-ordered-list) "\FF09";
+      }
 
-.keiyaku>hr {
-  border: none;
-  border-top: 1px solid black;
-  margin: 2em 0;
-}
+      // 二级
+      >ol {
+        @extend %c-ol;
+        counter-reset: keiyaku-ordered-list-2;
 
-.keiyaku>h4 {
-  position: absolute;
-  margin: 0;
-  right: 30em;
-  font-size: 100%;
-}
+        >li {
+          text-indent: -2.5em;
+          counter-increment: keiyaku-ordered-list-2;
 
-.keiyaku>h4+ul {
-  margin: 0 0 2em auto;
-  width: 28em;
-  list-style: none;
-}
+          &::before {
+            content: "\FF08"counter(keiyaku-ordered-list-2, lower-alpha) "\FF09";
+          }
 
-.keiyaku>h4+ul>li:last-child::after {
-  content: "\329E";
-  position: absolute;
-  right: 1em;
-}
+          // 三级
+          >ol {
+            @extend %c-ol;
+            counter-reset: keiyaku-ordered-list-3;
 
-.keiyaku>blockquote {
-  border: 1px solid black;
-  padding: .5em 1.5em;
-  margin: 1em 0 1.5em;
+
+            >li {
+              text-indent: -2.5em;
+              counter-increment: keiyaku-ordered-list-3;
+
+              &::before {
+                content: "\FF08"counter(keiyaku-ordered-list-3, lower-roman) "\FF09";
+              }
+            }
+          }
+        }
+      }
+    }
+
+    ul {
+      padding: 0 0 0 2.5em;
+      >li {
+        text-indent: 0;
+      }
+    }
+  }
+
+  >hr {
+    border: none;
+    border-top: 1px solid black;
+    margin: 2em 0;
+  }
+
+  >h4 {
+    position: absolute;
+    margin: 0;
+    right: 30em;
+    font-size: 100%;
+
+    +ul {
+      margin: 0 0 2em auto;
+      width: 28em;
+      list-style: none;
+
+      >li {
+        padding: 0 0 0.5em 0;
+
+        // &:first-child::after {
+        //   content: "\329E";
+        //   position: absolute;
+        //   right: 1em;
+        // }
+      }
+    }
+  }
+
+  >blockquote {
+    border: 1px solid black;
+    padding: .5em 1.5em;
+    margin: 1em 0 1.5em;
+  }
 }
