--- a/themes/contracts/assets/scss/style.scss
+++ b/themes/contracts/assets/scss/style.scss
@@ -1,21 +1,42 @@
 @import './keiyaku';
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC&display=swap');
 
 body {
-  padding: 20mm;
+  padding: 0;
+  width: 100%;
   line-height: 1.5em;
   max-width: 40em;
-  margin: 0 auto
+  margin: 3em auto 0 auto;
+  font-family: 'Noto Serif SC', serif;
 }
 
 h1 {
-  margin-bottom: 1em
+  margin-bottom: 1em;
 }
 
 h2 {
-  margin-top: 1.5em
+  margin-top: 1.5em;
 }
 
 pre,
 code {
-  background: #f7f7f7
+  background: #f7f7f7;
+}
+
+// https://stackoverflow.com/a/12282093/5729581
+u {
+  text-decoration: none;
+  position: relative;
+
+  &:after {
+    content: '';
+
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0px;
+
+    border-width: 0 0 1px;
+    border-style: solid;
+  }
 }
